.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Grade__c.object
<CustomObject>
    <description>Public Sector
Records Grades associated with Posts</description>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xCompany</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Grade</relationshipLabel>
        <relationshipName>Grade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_FTE_salary__c</fullName>
        <label>Max FTE salary</label>
        <summarizedField>xcdhcm__Pay_Spine__c.xcdhcm__FTE_salary__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Max_spinal_point__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Pay_Spine__c.xcdhcm__Grade_band_L__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_spinal_point__c</fullName>
        <label>Max spinal point</label>
        <summarizedField>xcdhcm__Pay_Spine__c.xcdhcm__Spinal_point__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Max_spinal_point__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Pay_Spine__c.xcdhcm__Grade_band_L__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Min_FTE_salary__c</fullName>
        <label>Min FTE salary</label>
        <summarizedField>xcdhcm__Pay_Spine__c.xcdhcm__FTE_salary__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Min_spinal_point__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Pay_Spine__c.xcdhcm__Grade_band_L__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Min_spinal_point__c</fullName>
        <label>Min spinal point</label>
        <summarizedField>xcdhcm__Pay_Spine__c.xcdhcm__Spinal_point__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Min_spinal_point__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>xcdhcm__Pay_Spine__c.xcdhcm__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Pay_Spine__c.xcdhcm__Grade_band_L__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay scale</label>
        <referenceTo>xcdhcm__Pay_Scale__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grade</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Company__c</columns>
        <columns>xcdhcm__Min_spinal_point__c</columns>
        <columns>xcdhcm__Min_FTE_salary__c</columns>
        <columns>xcdhcm__Max_spinal_point__c</columns>
        <columns>xcdhcm__Max_FTE_salary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Grade name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Grade_name_should_be_more_than_2_chars</fullName>
        <active>true</active>
        <description>To enforce grade name to contain more than 3 characters as Grade lookup will not show records that have less than 3 characters.</description>
        <errorConditionFormula>LEN( Name ) &lt;  3</errorConditionFormula>
        <errorMessage>You may not create a grade with less than 3 characters</errorMessage>
    </validationRules>
</CustomObject>